[tool.poetry]
authors = ["Vivian Phung <dev@vivianphung.com>"]
description = "GNR: Restrooms for All"
name = "gnr-restrooms-for-all-dark-firefly-3391"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
atomicwrites = "^1.4.1"
attrs = "^23.2.0"
bootstrap-flask = "^2.4.0"
certifi = "^2024.7.4"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
fuzzywuzzy = "^0.18.0"
gunicorn = "^22.0.0"
haversine = "^2.8.1"
idna = "^3.7"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
levenshtein = "^0.25.1"
markupsafe = "^2.1.5"
pathlib-mate = "^1.3.2"
prettytable = "^3.10.2"
pytailwindcss = "^0.2.0"
python = "^3.10"
python-dotenv = "^1.0.1"
python-levenshtein = "^0.25.1"
rapidfuzz = "^3.9.4"
requests = "^2.32.3"
six = "^1.16.0"
sqlalchemy = "^2.0.31"
sqlalchemy-mate = "1.4.28.3"
urllib3 = "^2.2.2"
uszipcode = "^1.0.1"
wcwidth = "^0.2.13"
werkzeug = "^3.0.3"
wtforms = "^3.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
